# MKL_GEMM_tests

./: .gitignore  CMakeLists.txt  bf16bf16f32.cpp  common.c  common.h  create_csv.sh  dgemm.cpp  f16f16f32.cpp  hgemm.cpp  run_benchs.sh  s16s16s32.cpp  s8u8s32.cpp  sgemm.cpp
output_files/: CMakeLists.txt  compare_outputs.cpp  run_benchs.sh
